@@ -1,3 +1,8 @@
+Thu Oct 18 15:11:31 2012  Koichi Sasada  <ko1@atdot.net>
+
+	* vm_insnhelper.c: add `inline' keyword to several functions.
+	  Compilers (gcc) are conservative than I expected.
+
 Thu Oct 18 15:01:15 2012  Koichi Sasada  <ko1@atdot.net>
 
 	* include/ruby/ruby.h: add a decl. of
